--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     "name": "James Ellis"
   }],
   "require": {
-    "silverstripe/framework": "~4.0"
+    "silverstripe/framework": "^4.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^3 || ^4 || ^5"
+    "phpunit/phpunit": "^5.7"
   },
   "extra": {
     "installer-name": "silverstripe-async-loader"
